outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-3708797513707662953_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines regret, distance, and a novel "connectivity potential" metric (measuring a node's ability to bridge paths based on centrality and future connectivity), with weights that adapt based on remaining nodes and a new "exploration factor" that encourages diversity in early stages and precision in later stages.}
                                                                                                                  ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines regret, distance, and a novel "connectivity potential" metric (measuring a node's ability to bridge paths based on centrality and future connectivity), with weights that adapt based on remaining nodes and a new "exploration factor" that encourages diversity in early stages and precision in later stages.}
                                                                                                                  ^
SyntaxError: unterminated string literal (detected at line 1)
